test/sema/call-mutating-method-from-nonmutating-method.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

class C {
    // CHECK: [[@LINE+1]]:16: error: cannot call mutating function 'C.g' on immutable receiver
    func f() { g() }
    mutating func g() {}
}
